Phonegap: Add Stop and Edit event

--- a/PhoneGap/www/css/index.css
+++ b/PhoneGap/www/css/index.css
@@ -244,7 +244,7 @@ h1 {
 /*Structure of Detail*/
 
 #divEventInfo {
-    height: 10%;
+    height: 15%;
 }
 
 #divSlider {
@@ -255,7 +255,7 @@ h1 {
 
 #divComments {
     width: 100%;
-    height: 35%;
+    height: 30%;
     position: fixed;
     overflow-y: scroll;
     overflow-wrap: break-word;
